Добавление перекрёстных ссылок между представлениями

--- a/WebStore/Views/Home/Employees.cshtml
+++ b/WebStore/Views/Home/Employees.cshtml
@@ -6,7 +6,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Сштрудники</title>
+    <title>Сотрудники</title>
 </head>
 <body>
     <h3>Сотрудники</h3>
@@ -34,5 +34,6 @@
             }
         </tbody>
     </table>
+    <a href="/">Домой</a>
 </body>
 </html>
