--- a/WebStore/Views/_ViewImports.cshtml
+++ b/WebStore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WebStore
 @using WebStore.Models
 
-@addTagHelper *, Mircosoft.AspNetCore.Mvc.TagHelpers
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebStore
