--- a/WebStore/Views/Home/Partial/_Slider.cshtml
+++ b/WebStore/Views/Home/Partial/_Slider.cshtml
@@ -1,5 +1,4 @@
-﻿<div>
-    <section id="slider">
+﻿<section id="slider">
         <!--slider-->
         <div class="container">
             <div class="row">
@@ -64,4 +63,3 @@
             </div>
         </div>
     </section><!--/slider-->
-</div>
