--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -12,6 +12,7 @@
                 <th>Имя</th>
                 <th>Отчество</th>
                 <th>Возраст</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -23,9 +24,11 @@
                     <td>@employee.FirstName</td>
                     <td>@employee.Patronymic</td>
                     <td>@employee.Age</td>
-                    @*в качестве переметра в метод передаём нового сотрудника, у которого ИД равен ИД текущего сотрудника*@
-                    @*таким образом "криво-косо" работает*@
-                    <td>@Html.ActionLink("Детали", "Details", new { id = @employee.Id }, null)</td>
+                    <td>
+                        <a asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id">
+                            <i class="fa fa-info"></i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
