--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -18,7 +18,7 @@
                 <li><a href="blog-single.html">Блог магазина</a></li>
             </ul>
         </li>
-        <li><a href="404.html">404</a></li>
+        <li><a asp-controller="Home" asp-action="Error404">404</a></li>
         <li><a href="contact-us.html">Контакты</a></li>
         <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
     </ul>
