--- a/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="logo pull-left">
-                        <a href="index.html"><img src="~/images/home/logo.png" alt="" /></a>
+                        <a asp-controller="Home" asp-action="Index"><img src="~/images/home/logo.png" alt="" /></a>
                     </div>
                     <div class="btn-group pull-right">
                         <div class="btn-group">
@@ -65,9 +65,9 @@
                         <ul class="nav navbar-nav">
                             <li><a href="#"><i class="fa fa-user"></i> Аккаунт</a></li>
                             <li><a href="#"><i class="fa fa-star"></i> Список желаний</a></li>
-                            <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Оформить заказ</a></li>
-                            <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-                            <li><a href="login.html"><i class="fa fa-lock"></i> Вход</a></li>
+                            <li><a asp-controller="Home" asp-action="CheckOut"><i class="fa fa-crosshairs"></i> Оформить заказ</a></li>
+                            <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
+                            <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
                         </ul>
                     </div>
                 </div>
