--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -7,7 +7,7 @@
                 <li><a href="shop.html">Каталог</a></li>
                 <li><a href="product-details.html">О товаре</a></li>
                 <li><a href="checkout.html">Оформить заказ</a></li>
-                <li><a href="cart.html">Корзина</a></li>
+                <li><a asp-controller="Home" asp-action="Cart">Корзина</a></li>
                 <li><a href="login.html">Вход</a></li>
             </ul>
         </li>
