Добавлено представление контактов. Непонятно как сделать так, чтобы указанный в контактах адресс отображался на гугл карте в самом представлении (адрес указан в частичном представлении).

--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -19,7 +19,7 @@
             </ul>
         </li>
         <li><a asp-controller="Home" asp-action="Error404">404</a></li>
-        <li><a href="contact-us.html">Контакты</a></li>
+        <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>
         <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
     </ul>
 </div>
