--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -8,7 +8,7 @@
                 <li><a href="product-details.html">О товаре</a></li>
                 <li><a asp-controller="Home" asp-action="CheckOut">Оформить заказ</a></li>
                 <li><a asp-controller="Home" asp-action="Cart">Корзина</a></li>
-                <li><a href="login.html">Вход</a></li>
+                <li><a asp-controller="Home" asp-action="Login">Вход</a></li>
             </ul>
         </li>
         <li class="dropdown">
