--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -4,7 +4,7 @@
         <li class="dropdown">
             <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a href="shop.html">Каталог</a></li>
+                <li><a asp-controller="Home" asp-action="Shop">Каталог</a></li>
                 <li><a asp-controller="Home" asp-action="ProductDetail">О товаре</a></li>
                 <li><a asp-controller="Home" asp-action="CheckOut">Оформить заказ</a></li>
                 <li><a asp-controller="Home" asp-action="Cart">Корзина</a></li>
