--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -14,8 +14,8 @@
         <li class="dropdown">
             <a href="#">Блог<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a asp-controller="Home" asp-action="Blog">Список блогов</a></li>
-                <li><a asp-controller="Home" asp-action="BlogSingle">Блог магазина</a></li>
+                <li><a asp-controller="Blogs" asp-action="Index">Список блогов</a></li>
+                <li><a asp-controller="Blogs" asp-action="WebStoreBlog">Блог магазина</a></li>
             </ul>
         </li>
         <li><a asp-controller="Home" asp-action="Error404">404</a></li>
