Устранение неполадки с отображение страницы 404 ошибки

--- a/WebStore/Views/Home/Error404.cshtml
+++ b/WebStore/Views/Home/Error404.cshtml
@@ -1,8 +1,10 @@
 ﻿@*Как можно сделать так, чтобы страница 404 ошибки игнорировала отдельные части нашей мастер-страницы Layout?*@
+@{ Layout = "_AnotherLayout"; }
+
 <section>
     <div class="container text-center">
         <div class="logo-404">
-            <a href="index.html"><img src="~/images/home/logo.png" alt="" /></a>
+            <a asp-controller="Home" asp-action="Index"><img src="~/images/home/logo.png" alt="" /></a>
         </div>
         <div class="content-404">
             <img src="~/images/404/404.png" class="img-responsive" alt="" />
