--- a/WebStore/Views/Employees/Delete.cshtml
+++ b/WebStore/Views/Employees/Delete.cshtml
@@ -1,15 +1,15 @@
-﻿@model WebStore.Models.Employee
+﻿@model WebStore.ViewModels.EmployeeViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-
 <div class="container">
-    <div>
+    <h1>Delete</h1>
 
-        <h1>Details</h1>
-        <h4>Employee</h4>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>EmployeeViewModel</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
@@ -19,10 +19,10 @@
                 @Html.DisplayFor(model => model.Id)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayNameFor(model => model.Name)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.FirstName)
+                @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.LastName)
@@ -31,10 +31,10 @@
                 @Html.DisplayFor(model => model.LastName)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Patronymic)
+                @Html.DisplayNameFor(model => model.SecondName)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Patronymic)
+                @Html.DisplayFor(model => model.SecondName)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Age)
@@ -43,10 +43,11 @@
                 @Html.DisplayFor(model => model.Age)
             </dd>
         </dl>
+
+        <form asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-action="Index">Back to List</a>
+        </form>
     </div>
-    <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-default">Edit</a>|
-        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>|
-        <a asp-action="Index">Back to List</a>
-    </div>
+
 </div>
