--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -4,35 +4,57 @@
 <div class="container">
     <h3>Сотрудники</h3>
     <hr />
-    <table class="table">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Фамилия</th>
-                <th>Имя</th>
-                <th>Отчество</th>
-                <th>Возраст</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var employee in Model)
-            {
+
+    <p>
+        <a asp-controller="Employees" asp-action="Create" class="btn-default">Создать 1</a>
+        <a asp-controller="Employees" asp-action="Edit" class="btn-default">Создать 2</a>
+    </p>
+
+    @if (Model.Any())
+     {
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>@employee.Id</td>
-                    <td>@employee.LastName</td>
-                    <td>@employee.FirstName</td>
-                    <td>@employee.Patronymic</td>
-                    <td>@employee.Age</td>
-                    <td>
-                        <a asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id">
-                            <i class="fa fa-info"></i>
-                        </a>
-                    </td>
+                    <th>#</th>
+                    <th>Фамилия</th>
+                    <th>Имя</th>
+                    <th>Отчество</th>
+                    <th>Возраст</th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var employee in Model)
+                {
+                    <tr>
+                        <td>@employee.Id</td>
+                        <td>@employee.LastName</td>
+                        <td>@employee.FirstName</td>
+                        <td>@employee.Patronymic</td>
+                        <td>@employee.Age</td>
+                        <td>
+                            <a asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id">
+                                <i class="fa fa-info"></i>
+                            </a>|
+                            <a asp-controller="Employees" asp-action="Edit" asp-route-id="@employee.Id">
+                                <i class="fa fa-edit"></i>
+                            </a>|
+                            <a asp-controller="Employees" asp-action="Delete" asp-route-id="@employee.Id" class="text-danger">
+                                <i class="fa fa-cut"></i>
+                            </a>|
+                            <form asp-action="DeleteConfirmed" asp-route-id="@employee.Id">
+                                <input type="submit" value="Delete" class="btn btn-danger" />
+                            </form>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+     }
+     else
+     {
+        <p>Сотрудников нет!</p>
+     }
     <p>
         <a asp-controller="Home" asp-action="Index" class="btn btn-default">Домой</a>
     </p>
