Контроллер каталога товаров

--- a/WebStore/Views/Home/Partial/_FeaturesItems.cshtml
+++ b/WebStore/Views/Home/Partial/_FeaturesItems.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="features_items">
+﻿@model IEnumerable<ProductViewModel>
+
+<div class="features_items">
     <!--features_items-->
     <h2 class="title text-center">Товары</h2>
     <div class="col-sm-4">
