--- a/WebStore/Views/Employees/Details.cshtml
+++ b/WebStore/Views/Employees/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebStore.Models.Employee
+﻿@model WebStore.ViewModels.EmployeeViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -19,10 +19,10 @@
                 @Html.DisplayFor(model => model.Id)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayNameFor(model => model.Name)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.FirstName)
+                @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.LastName)
@@ -31,10 +31,10 @@
                 @Html.DisplayFor(model => model.LastName)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Patronymic)
+                @Html.DisplayNameFor(model => model.SecondName)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Patronymic)
+                @Html.DisplayFor(model => model.SecondName)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Age)
