Метод входа в систему

--- a/WebStore/Views/Account/AccessDenied.cshtml
+++ b/WebStore/Views/Account/AccessDenied.cshtml
@@ -1,7 +1,13 @@
 ﻿
 @{
-    ViewData["Title"] = "AccessDenied";
+    ViewData["Title"] = "Отказано в доступе";
 }
 
-<h1>AccessDenied</h1>
+<div class="container">
+    <h2>@ViewBag.Title</h2>
+
+    <p>
+        <a asp-controller="Home" asp-action="Index">На главную</a>
+    </p>
+</div>
 
