--- a/WebStore/Views/_ViewImports.cshtml
+++ b/WebStore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WebStore
 @using WebStore.ViewModels
+@using WebStore.Domain.Entities.Identity
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
