--- a/WebStore/Views/Catalog/Details.cshtml
+++ b/WebStore/Views/Catalog/Details.cshtml
@@ -62,7 +62,7 @@
                                 <span>@Model.Price.ToString("C")</span>
                                 <label>Количество:</label>
                                 <input type="text" value="3" />
-                                <a class="btn btn-default cart">
+                                <a class="btn btn-default cart" asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id">
                                     <i class="fa fa-shopping-cart"></i>
                                     В корзину
                                 </a>
