--- a/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -7,7 +7,7 @@
         <li><a href="#"><i class="fa fa-user"></i> @User.Identity?.Name</a></li>
         <li><a href="#"><i class="fa fa-star"></i> Список желаний</a></li>
         <li><a asp-controller="Home" asp-action="CheckOut"><i class="fa fa-crosshairs"></i> Оформить заказ</a></li>
-        <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
+        <li><a asp-controller="Cart" asp-action="Index"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
         <li><a asp-controller="Account" asp-action="Logout"><i class="fa fa-lock"></i> Выход</a></li>
     </ul>
 </div>
