--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -7,7 +7,7 @@
                 <li><a asp-controller="Home" asp-action="Shop">Каталог</a></li>
                 <li><a asp-controller="Home" asp-action="ProductDetail">О товаре</a></li>
                 <li><a asp-controller="Home" asp-action="CheckOut">Оформить заказ</a></li>
-                <li><a asp-controller="Home" asp-action="Cart">Корзина</a></li>
+                <li><a asp-controller="Cart" asp-action="Index">Корзина</a></li>
                 <li><a asp-controller="Home" asp-action="Login">Вход</a></li>
             </ul>
         </li>
